--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,22 @@
     <string name="main_settings_text">Settings</string>
     <string name="search_text_main">Enter the parking details:</string>
     <string name="search_text_address">Address:</string>
-    <string name="search_text_area_label">Parking Label (if any):</string>
-    <string name="search_text_start_time">Starting Time:</string>
-    <string name="search_text_end_time">Ending Time:</string>
+    <string name="search_text_day">Day:</string>
+    <string name="search_text_area_label">Label:</string>
+    <string name="search_text_start_time">Starting time:</string>
+    <string name="search_text_end_time">Ending time:</string>
     <string name="search_error_toast_text">Please enter parking address, starting time and ending time.</string>
     <string name="search_address_error_toast_text">Please enter a full address string.</string>
+    <string name="mark_parking_type_text">Parking type:</string>
+    <string name="mark_parking_day_text">Day:</string>
+    <string name="mark_parking_start_time_text">Start time:</string>
+    <string name="mark_parking_end_time_text">End time:</string>
+    <string name="mark_parking_current_rules_text">Current rules:</string>
+    <string name="mark_parking_residents_text">Residents</string>
+    <string name="mark_parking_price_text">Price:</string>
+    <string name="mark_error_toast_text">Please enter correct times.</string>
+    <string name="mark_parking_label_text">Label:</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
